PRSUM-10218: arrangement-manager service V3 implementation